# merida

./: .gitignore  LICENSE  README.md  all_lightcurves_downloader.py  lightcurve_downloader.py  pyproject.toml  requirements.txt  server_for_lightcurves.py  setup.py  visualization_tool.py  zones_for_lightcurves.py
data/: gb1-R-1-1-315.csv  gb1-R-1-1-315.feather  gb9-R-3-7-9719.csv  gb9-R-3-7-9719.feather
data/alerts/moa_alerts/: moa2_2006_radec.csv  moa2_2007_radec.csv  moa2_2009_radec.csv  moa2_2010_radec.csv  moa2_2011_radec.csv
data/alerts/ogle_alerts/: ogle3_2006_radec.csv  ogle3_2007_radec.csv  ogle4_2011_radec.csv  ogle4_2012_radec.csv  ogle4_2013_radec.csv  ogle4_2014_radec.csv  readme.md
data/moa_alerts/: moa2_2008_radec.csv  moa2_2012_radec.csv  moa2_2013_radec.csv  moa2_2014_radec.csv
data/negative/: gb4_R_10_gb4-R-10-2-141805.phot.cor.feather
data/ogle_alerts/: ogle3_2008_radec.csv  ogle3_2009_radec.csv
data/positive/: gb10_R_5_gb10-R-5-6-130249.phot.cor.feather
merida/: lightcurves_cls.py  matching_stars.py  moa9yr_lightcurve_cls.py  moa_rereduced_lightcurve_cls.py  server_for_lightcurves.py  zones_for_lightcurves.py
src/: lightcurves_cls.py  server_for_lightcurves.py  zones_for_lightcurves.py
src/analysis/: valid_data_points.py
src/merida/: lightcurves_cls.py  metadata_cls.py  moa9yr_lightcurve_cls.py  moa_rereduced_lightcurve_cls.py  ra_dec_converter.py  season_determiner.py  server_for_lightcurves.py  sumi_tags.py
tests/end_to_end_tests/: test_light_curve_download.py
