[project]
name = "merida"
dynamic = ["version"]
description = "MERIDA: MOA9yr Exploration and Research Interface for Dataset Analysis Resources"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Stela IS", email = "stela.ishitanisilva@nasa.gov" },
    { name = "Greg O" },
    { name = "MERIDA authors" },
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bokeh>=3.4.1",
    "html5lib>=1.1",
    "lxml>=4.9.3",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "pyarrow>=14.0.1",
    "requests>=2.32.0",
    "tqdm>=4.66.3",
    "pytest>=7.1.3",
    "pytest-pycharm>=0.7.0",
    "astropy>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/stelais/merida"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/merida/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
